--- a/VC_profit_estimator_multiple_linear_regression.ipynb
+++ b/VC_profit_estimator_multiple_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9d979f7",
+   "id": "e7e2088c",
    "metadata": {},
    "source": [
     "# Multiple Linear Regression to estimate the profit based on multiple parameters\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc926879",
+   "id": "a6bdd2e1",
    "metadata": {},
    "source": [
     "## Importing the libraries (pandas, numpy, matplotlib)"
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8b32c155",
+   "id": "9230e2fc",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5be20ed1",
+   "id": "990e86c5",
    "metadata": {},
    "source": [
     "## Importing the dataset (50_Startups.csv) from source folder "
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "aeb48d59",
+   "id": "14278f01",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf29fc2",
+   "id": "172e2610",
    "metadata": {},
    "source": [
     "## Assigning all rows and all columns except the last column (i. e. Profit) to x"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5e00cd0e",
+   "id": "40a57f20",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efa3834",
+   "id": "3bedd6d8",
    "metadata": {},
    "source": [
     "## Assigning all rows and last column to y"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "295efdca",
+   "id": "6c91746b",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59abb787",
+   "id": "27feb13e",
    "metadata": {},
    "source": [
     "## Encoding categorical data"
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a6237cb5",
+   "id": "d3823823",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ea7272b6",
+   "id": "c073cce1",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "097b9bd7",
+   "id": "e7d8ee88",
    "metadata": {},
    "source": [
     "## Feature Scaling \n",
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "80a04942",
+   "id": "bf26b622",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1aade5",
+   "id": "b57a2659",
    "metadata": {},
    "source": [
     "## Splitting the dataset into the Training set and Test set"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "62170a52",
+   "id": "0b7f38aa",
    "metadata": {},
    "outputs": [
     {
@@ -438,19 +438,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464d5053",
+   "id": "e7833335",
    "metadata": {},
    "source": [
     "## Training the Mutliple Linear Regression model on the Training set\n",
     "\n",
     "Q. Do we have to deploy Backward Elimination to select the features that have the highest P-value and are most statistically significant?\n",
-    "Answer. No. Because the class we are about to call to build MLR will automatically best features that have highest P-values and are most statistically significant to estimate profit with highest accuracy.\n"
+    "Answer. No. Because the class we are about to call to build Multiple Linear Regerssion will automatically best features that have highest P-values and are most statistically significant to estimate profit with highest accuracy.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b7bd5b35",
+   "id": "3580789f",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "aed8ae69",
+   "id": "86e70f0a",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "564710d2",
+   "id": "f2e4e98f",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e139d4b",
+   "id": "6f309bf0",
    "metadata": {},
    "source": [
     "## Predicting Test set results"
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "dfa2d6a2",
+   "id": "86d6fed0",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2af513f",
+   "id": "8772fa5c",
    "metadata": {},
    "source": [
     "## Comparing Actual result to the Predicted Model result\n"
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "432a75a9",
+   "id": "eb99fa59",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "e20c4fbf",
+   "id": "9322ae34",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc9d7a3",
+   "id": "02109c32",
    "metadata": {},
    "source": [
     "## R-2 score =0.94 which is considered a decent score"
